Cert-Manager/01-Staging/03-Ingress-SSL-Staging-Certificate.yaml
apiVersion: networking.k8s.io/v1

# kubectl apply -f Cert-Manager/01-Staging/03-Ingress-SSL-Staging-Certificate.yaml
# kubectl delete -f Cert-Manager/01-Staging/03-Ingress-SSL-Staging-Certificate.yaml

kind: Ingress
metadata:
  name: ingress-letsencrypt-nginx.fillswim.com-staging-certfile
  # namespace: ssl-test

spec:
  tls:
    - hosts: 
      - nginx.fillswim.com                                                  # домен, на который будет получен сертификат
      secretName: nginx.fillswim.com-ssl-letsencrypt-staging-certificate    # имя секрета, в котором будет храниться сертификат
  ingressClassName: nginx
  rules:
  - host: nginx.fillswim.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service # Название сервиса, на который будет отправляться запрос
            port: 
              number: 81
